--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_auth: ^3.3.14
   google_sign_in: ^5.3.0
+  cloud_firestore: ^3.1.12
   provider: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
