--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_sign_in: ^5.3.0
   cloud_firestore: ^3.1.12
   provider: ^5.0.0
+  carousel_slider: ^4.0.0
+  dots_indicator: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
